unpackaged/main/default/objects/CMPL123CME__HHE__c/CMPL123CME__HHE__c.object-meta.xml
<CustomObject>
    <description>Health Hazard Evaluation Or Health Risk Assessment</description>
    <label>HHE</label>
    <nameField>
        <displayFormat>HHE-{0000}</displayFormat>
        <label>Incident Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HHE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>