unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Any_FDA_Comments__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Any_FDA_Comments__c</fullName>
        <description>Any FDA Comments</description>
        <inlineHelpText>Any FDA Comments</inlineHelpText>
        <label>Any FDA Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>