unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__AnySignificant_Public_Health_Impact__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__AnySignificant_Public_Health_Impact__c</fullName>
        <description>Does the Health Consequence Have Significant Public Health Impact Beyond Users (e.g. Spread of Serious
Infection to Others)?</description>
        <inlineHelpText>Does the Health Consequence Have Significant Public Health Impact Beyond Users (e.g. Spread of Serious
Infection to Others)?</inlineHelpText>
        <label>Any Significant Public Health Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>