unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Approval_1_Performed_By__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Approval_1_Performed_By__c</fullName>
        <label>Approval 1 Performed By</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>