unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Approval_1_Performed_On__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Approval_1_Performed_On__c</fullName>
        <label>Approval 1 Performed On</label>
        <type>DateTime</type>
    </CustomField>