unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Assess_Hazard_Explanations__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Assess_Hazard_Explanations__c</fullName>
        <description>Assess the hazards associated with use of the defective product explanation</description>
        <inlineHelpText>Assess the hazards associated with use of the defective product explanation</inlineHelpText>
        <label>Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>