unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Can_Device_Failure_Recognized_By_User__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Can_Device_Failure_Recognized_By_User__c</fullName>
        <description>Can Device Failure Recognized By User</description>
        <inlineHelpText>Can Device Failure Recognized By User</inlineHelpText>
        <label>unused Failure Easily Recognized</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>