unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Clinical_Factors_That_May_Mitigate_Risk__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Clinical_Factors_That_May_Mitigate_Risk__c</fullName>
        <description>Describe Any Clinical Factors That May Mitigate the Risk:</description>
        <inlineHelpText>Describe Any Clinical Factors That May Mitigate the Risk:</inlineHelpText>
        <label>UnusedClinical Factors That May Mitigate</label>
        <type>TextArea</type>
    </CustomField>