unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__ClinicalFactors_That_May_Mitigate_Risk__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__ClinicalFactors_That_May_Mitigate_Risk__c</fullName>
        <description>Clinical Factors That May Mitigate Risk</description>
        <inlineHelpText>Clinical Factors That May Mitigate Risk</inlineHelpText>
        <label>Clinical Factors That May Mitigate Risk</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>