unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Comments_on_how_these_estimates_reached__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Comments_on_how_these_estimates_reached__c</fullName>
        <description>Firm's Estimate - Any Comments on How these Estimates were Reached</description>
        <inlineHelpText>Firm's Estimate - Any Comments on How these Estimates were Reached</inlineHelpText>
        <label>Comments on how these estimates reached</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>