unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Complaints_and_Injuries_Reported_to_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Complaints_and_Injuries_Reported_to_Date__c</fullName>
        <description>Describe the Complaints and Injuries Reported to Date:</description>
        <inlineHelpText>Describe the Complaints and Injuries Reported to Date:</inlineHelpText>
        <label>Complaints and Injuries Reported to Date</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>