unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date__c</fullName>
        <description>Date</description>
        <inlineHelpText>Date</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </CustomField>