unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Date_of_Analysis__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Date_of_Analysis__c</fullName>
        <description>Date of Analysis:</description>
        <inlineHelpText>Date of Analysis:</inlineHelpText>
        <label>Date of Analysis</label>
        <type>Date</type>
    </CustomField>