unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Deaths_Reported_International__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Deaths_Reported_International__c</fullName>
        <description>Deaths Reported International</description>
        <inlineHelpText>Deaths Reported International</inlineHelpText>
        <label>Deaths Reported International</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>