unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Deaths_Reported_US__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Deaths_Reported_US__c</fullName>
        <description>Deaths Reported U.S.</description>
        <inlineHelpText>Deaths Reported U.S.</inlineHelpText>
        <label>Deaths Reported U.S.</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>