unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Description_of_the_Defect_Malfunction_o__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Description_of_the_Defect_Malfunction_o__c</fullName>
        <description>Description of the Defect, Malfunction or Error in Use of the Device:</description>
        <inlineHelpText>Description of the Defect, Malfunction or Error in Use of the Device:</inlineHelpText>
        <label>Description of the Defect, Malfunction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>