unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Design_Factors_That_Might_Mitigate_Risk__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Design_Factors_That_Might_Mitigate_Risk__c</fullName>
        <description>Design Factors That Might Mitigate Risk</description>
        <inlineHelpText>Design Factors That Might Mitigate Risk</inlineHelpText>
        <label>Design Factors That Might Mitigate Risk</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>