unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Device_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Device_Name__c</fullName>
        <description>Device Name</description>
        <inlineHelpText>Device Name</inlineHelpText>
        <label>Device Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>