unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Devices_from_affected_Expected_Defect__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Devices_from_affected_Expected_Defect__c</fullName>
        <description>How Many Devices from the Affected Lots Are Expected to Have or Develop the Defect?</description>
        <inlineHelpText>How Many Devices from the Affected Lots Are Expected to Have or Develop the Defect?</inlineHelpText>
        <label>Defective Devices in Affected Lots</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>