unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Devices_likely_to_cause_injury__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Devices_likely_to_cause_injury__c</fullName>
        <description>Firm's estimate - Of Those Devices that Fail, How Many are Likely to Cause Injury if Used?</description>
        <inlineHelpText>Firm's estimate - Of Those Devices that Fail, How Many are Likely to Cause Injury if Used?</inlineHelpText>
        <label>Amount likely to Cause Injury</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>