unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Devices_that_indicate_lifetime_failure__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Devices_that_indicate_lifetime_failure__c</fullName>
        <description>How Many Devices with the Defect are Likely to Exhibit the Failure Over the Lifetime of the Device?</description>
        <inlineHelpText>Firm's Estimate - How Many Devices with the Defect are Likely to Exhibit the Failure Over the Lifetime of the Device?</inlineHelpText>
        <label>Amount to Exhibit Lifetime Defect</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>