unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Devices_To_Recall_Review_In_Foreign__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Devices_To_Recall_Review_In_Foreign__c</fullName>
        <description>No.Of Devices To Recall/Review In Foreign</description>
        <inlineHelpText>No.Of Devices To Recall/Review In Foreign</inlineHelpText>
        <label>No.Of DevicesTo Recall/Review In Foreign</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>