unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Explanation__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Explanation__c</fullName>
        <description>Explanation:</description>
        <inlineHelpText>Explanation:</inlineHelpText>
        <label>Unused Explanation</label>
        <type>TextArea</type>
    </CustomField>