unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Explanation_Comments__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Explanation_Comments__c</fullName>
        <description>Assess the Probability Explanation / Comments:</description>
        <inlineHelpText>Assess the Probability Explanation / Comments:</inlineHelpText>
        <label>Explanation / Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>