unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Explanation_Latest_Field__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Explanation_Latest_Field__c</fullName>
        <description>Explanation</description>
        <inlineHelpText>Explanation</inlineHelpText>
        <label>Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>