unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Factors_May_Contribute_to_Product_Risk__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Factors_May_Contribute_to_Product_Risk__c</fullName>
        <description>Factors That May Contribute to Product Risk (i.e. Device Design, Manufacturing Problems or User Error)</description>
        <inlineHelpText>Factors That May Contribute to Product Risk (i.e. Device Design, Manufacturing Problems or User Error)</inlineHelpText>
        <label>Factors That May Contribute to Risk</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>