unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Failure_Easily_Recognized_by_User__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Failure_Easily_Recognized_by_User__c</fullName>
        <description>Can Device Failure Recognized By User</description>
        <inlineHelpText>Can Device Failure Recognized By User</inlineHelpText>
        <label>Failure Easily Recognized by User</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>