unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Firms_Conclusion_About_Health_Risk__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Firms_Conclusion_About_Health_Risk__c</fullName>
        <description>Firm’s Conclusion About Health Risk</description>
        <inlineHelpText>Firm’s Conclusion About Health Risk</inlineHelpText>
        <label>Unused Firm’s Conclusion About Health</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>