unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__FirmsConclusion_About_Health_Risk__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__FirmsConclusion_About_Health_Risk__c</fullName>
        <description>Firm's Conclusion About Health Risk</description>
        <inlineHelpText>Firm's Conclusion About Health Risk</inlineHelpText>
        <label>Firm's Conclusion About Health Risk</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>