unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Hazard_cant_assessed_GreatRiskPo__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Hazard_cant_assessed_GreatRiskPo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hazard cannot be assessed with the data currently available</description>
        <inlineHelpText>Hazard cannot be assessed with the data currently available</inlineHelpText>
        <label>UnuseHazard Cannot Assessed With Current</label>
        <type>Checkbox</type>
    </CustomField>