unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Health_Conseq_due_to_defective_device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Health_Conseq_due_to_defective_device__c</fullName>
        <description>Describe the Immediate and Long Range Health Consequences (Injuries or Illnesses) That May Result from
Use of or Exposure to the Defective Device. (Include Known Off Label Uses)</description>
        <inlineHelpText>Describe the Immediate and Long Range Health Consequences (Injuries or Illnesses) That May Result from
Use of or Exposure to the Defective Device. (Include Known Off Label Uses)</inlineHelpText>
        <label>Unused Health Conseq. due to defective</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>