unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Health_Hazard_Evaluation__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Health_Hazard_Evaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Health Hazard Evaluation</description>
        <inlineHelpText>Health Hazard Evaluation</inlineHelpText>
        <label>Health Hazard Evaluation</label>
        <type>Checkbox</type>
    </CustomField>