unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Health_Risk_Assessment__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Health_Risk_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Health Risk Assessment</description>
        <inlineHelpText>Health Risk Assessment</inlineHelpText>
        <label>Health Risk Assessment</label>
        <type>Checkbox</type>
    </CustomField>