unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__HealthConseq_due_to_defective__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__HealthConseq_due_to_defective__c</fullName>
        <description>Health Conseq. due to defective device</description>
        <inlineHelpText>Health Conseq. due to defective device</inlineHelpText>
        <label>Health Conseq. due to defective device</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>