unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Injuries_Reported_in_International__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Injuries_Reported_in_International__c</fullName>
        <description>Injuries Reported in International</description>
        <inlineHelpText>Injuries Reported in International</inlineHelpText>
        <label>Injuries Reported in International</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>