unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Injuries_Reported_in_US__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Injuries_Reported_in_US__c</fullName>
        <description>Injuries Reported in U.S.</description>
        <inlineHelpText>Injuries Reported in U.S.</inlineHelpText>
        <label>Injuries Reported in U.S.</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>