unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Inspection__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Inspection__c</fullName>
        <description>Inspection</description>
        <inlineHelpText>Sources : Inspection</inlineHelpText>
        <label>Inspection</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>