unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Life_Threatening_GreatRiskPop__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Life_Threatening_GreatRiskPop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Life-threatening (death has/could occur)</description>
        <inlineHelpText>Life-threatening (death has/could occur)</inlineHelpText>
        <label>Unused Life-threatening</label>
        <type>Checkbox</type>
    </CustomField>