unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Limited_GreatRiskPo__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Limited_GreatRiskPo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Limited (transient, minor impairment or complaints)</description>
        <inlineHelpText>Limited (transient, minor impairment or complaints)</inlineHelpText>
        <label>Unused Limited</label>
        <type>Checkbox</type>
    </CustomField>