unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Lot_Serial_Numbers__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Lot_Serial_Numbers__c</fullName>
        <description>Lot/Serial Numbers</description>
        <inlineHelpText>Lot/Serial Numbers</inlineHelpText>
        <label>Lot/Serial Numbers</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>