unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Malfunction_Reports__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Malfunction_Reports__c</fullName>
        <description>Malfunction Reports</description>
        <inlineHelpText>Malfunction Reports</inlineHelpText>
        <label>Malfunction Reports</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>