unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Manufacturer__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer__c</fullName>
        <description>Manufacturer</description>
        <inlineHelpText>Sources : Manufacturer</inlineHelpText>
        <label>Unused Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>