unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Manufacturer_Recalling_Firm_Address__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Recalling_Firm_Address__c</fullName>
        <description>Manufacturer / Recalling Firm, Address</description>
        <inlineHelpText>Manufacturer / Recalling Firm, Address</inlineHelpText>
        <label>Manufacturer / Recalling Firm, Address</label>
        <type>TextArea</type>
    </CustomField>