unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Marketing_Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Marketing_Status__c</fullName>
        <description>Marketing Status</description>
        <inlineHelpText>(Include 510(K) Or PMA Number, Specify If Class I Exempt From 510(K)</inlineHelpText>
        <label>Marketing Status</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>