unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__MDRS__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__MDRS__c</fullName>
        <description>MDR’s</description>
        <inlineHelpText>Sources : MDR’s</inlineHelpText>
        <label>MDR’s</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>