unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Necessitates_Medical_GreatRiskPo__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Necessitates_Medical_GreatRiskPo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Necessitates medical or surgical intervention.</description>
        <inlineHelpText>Necessitates medical or surgical intervention.</inlineHelpText>
        <label>UnusedNecessitates med./surgical interv.</label>
        <type>Checkbox</type>
    </CustomField>