unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__No_Adverse_Health_Conseq_OverallPop__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__No_Adverse_Health_Conseq_OverallPop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No adverse health consequences</description>
        <inlineHelpText>No adverse health consequences</inlineHelpText>
        <label>Unused No Adverse Health Conseq.</label>
        <type>Checkbox</type>
    </CustomField>