unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__No_of_devices_that_will_develop_defect__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__No_of_devices_that_will_develop_defect__c</fullName>
        <description>Firm’s Estimate of Number of Devices that will Develop the Defect and/or Fail :</description>
        <inlineHelpText>Firm’s Estimate of Number of Devices that will Develop the Defect and/or Fail :</inlineHelpText>
        <label>Defective Devices in Affected Lots</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>