unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__No_Of_Devices_To_Recall_or_Review_In_US__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__No_Of_Devices_To_Recall_or_Review_In_US__c</fullName>
        <description>No. Of Devices To Recall or Review In US</description>
        <inlineHelpText>No. Of Devices To Recall or Review In US</inlineHelpText>
        <label>No. Of Devices To Recall or Review In US</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>