unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Number_of_Complaints__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Number_of_Complaints__c</fullName>
        <description>Number of Complaints</description>
        <inlineHelpText>Number of Complaints</inlineHelpText>
        <label>Number of Complaints</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>