unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Overall_Popu_Not_Likely_Cause_Adverse__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Overall_Popu_Not_Likely_Cause_Adverse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Medically reversible or Transient Adverse Health Consequences - Overall Population, Not Likely that Use will cause Any Advese Events</description>
        <inlineHelpText>Medically reversible or Transient Adverse Health Consequences - Overall Population, Not Likely that Use will cause Any Advese Events</inlineHelpText>
        <label>Unused Overall Popu,Not Likely,Cause AE</label>
        <type>Checkbox</type>
    </CustomField>