unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Overall_Popu_Not_Likely_Cause_Adverse_Ev__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Overall_Popu_Not_Likely_Cause_Adverse_Ev__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Serious Adverse Health Consequences - (Death, Life Threatening, Results
in Permanent Impairment) - Overall Population, Not Likely that Use will Cause Adverse Events</description>
        <inlineHelpText>Serious Adverse Health Consequences - (Death, Life Threatening, Results
in Permanent Impairment) - Overall Population, Not Likely that Use will Cause Adverse Events</inlineHelpText>
        <label>Unused Overall Popu,Not Likely,Cause AE</label>
        <type>Checkbox</type>
    </CustomField>