unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Overall_Popu_Reasonable_Probabil__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Overall_Popu_Reasonable_Probabil__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Medically reversible or Transient Adverse Health Consequences - Overall Population, Reasonable Probability that Use will cause</description>
        <inlineHelpText>Medically reversible or Transient Adverse Health Consequences - Overall Population, Reasonable Probability that Use will cause</inlineHelpText>
        <label>Unused Overall Popu. Reasonable Prob.</label>
        <type>Checkbox</type>
    </CustomField>