unpackaged/main/default/objects/CMPL123CME__HHE__c/fields/CMPL123CME__Overall_Popu_Reasonable_Probability__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Overall_Popu_Reasonable_Probability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Serious Adverse Health Consequences - (Death, Life Threatening, Results
in Permanent Impairment) - Overall Population, Reasonable Probabality that use will cause</description>
        <inlineHelpText>Serious Adverse Health Consequences - (Death, Life Threatening, Results
in Permanent Impairment) - Overall Population, Reasonable Probabality that use will cause</inlineHelpText>
        <label>Unused Overall Popu. ReasonableProb</label>
        <type>Checkbox</type>
    </CustomField>